@@ -1,82 +1,0 @@
-/*
- * Copyright (c) 2000 Tama Communications Corporation
- *
- * This file is part of GNU GLOBAL.
- *
- * GNU GLOBAL is free software; you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation; either version 2, or (at your option)
- * any later version.
- *
- * GNU GLOBAL is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
- */
-
-/* Define to `default' if you have type */
-#undef int32_t
-
-/* Define to `default' if you have type */
-#undef u_char
-
-/* Define to `default' if you have type */
-#undef u_int
-
-/* Define to `default' if you have type */
-#undef u_long
-
-/* Define to `default' if you have type */
-#undef u_short
-
-/* Define to `default' if you have type */
-#undef int8_t
-
-/* Define to `default' if you have type */
-#undef int16_t
-
-/* Define to `default' if you have type */
-#undef int32_t
-
-/* Define to `default' if you have type */
-#undef u_int8_t
-
-/* Define to `default' if you have type */
-#undef u_int16_t
-
-/* Define to `default' if you have type */
-#undef u_int32_t
-
-/* Define to `default' if you have type */
-#undef size_t
-
-/* Define to `default' if you have type */
-#undef ssize_t
-
-/* Define to `default' if you have type */
-#undef caddr_t
-
-/* Define to `default' if you have type */
-#undef sigset_t
-
-/* Define if your struct dirent has dp_d_namlen.  */
-#undef HAVE_DP_D_NAMLEN
-
-/* Define if your struct dirent has dp_d_type.  */
-#undef HAVE_DP_D_TYPE
-
-/* Define if your system have find(1). */
-#undef HAVE_FIND
-
-/* Define if your system have xargs(1). */
-#undef HAVE_XARGS
-
-/* Define if your system have grep(1). */
-#undef HAVE_GREP
-
-/* Define for current machine architecture. */
-#undef WORDS_BIGENDIAN
